--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -6,6 +6,6 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/button_send"
+        android:text="@string/button_google_mobile_leaderboard"
         android:onClick="sendMessage" />
 </LinearLayout>
