--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,7 +2,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal" >
+    android:orientation="vertical" >
+    <CheckBox android:id="@+id/checkbox_lb"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/checkbox_lb"
+        android:onClick="onCheckboxLbClicked"/>
+    <CheckBox android:id="@+id/checkbox_mr"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/checkbox_mr"
+        android:onClick="onCheckboxMrClicked"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
