--- a/res/layout/activity_display_message.xml
+++ b/res/layout/activity_display_message.xml
@@ -12,7 +12,7 @@
             android:layout_width="fill_parent"
             android:orientation="vertical">
 		    <LinearLayout
-		        android:id="@+id/linearLayout"
+		        android:id="@+id/linearLayoutLeaderboard"
 		        android:orientation="vertical"
 		        android:layout_width="fill_parent"
 		        android:layout_height="wrap_content"
