--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,18 +8,34 @@
         android:layout_height="wrap_content"
         android:text="@string/load_interstitial"
         android:onClick="loadInterstitial"/>
-    <CheckBox android:id="@+id/checkbox_lb"
+    <CheckBox android:id="@+id/checkbox_banner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/checkbox_lb"
+        android:text="@string/checkbox_banner"
         android:checked="true"
-        android:onClick="onCheckboxLbClicked"/>
-    <CheckBox android:id="@+id/checkbox_mr"
+        android:onClick="onCheckboxBannerClicked"/>
+    <CheckBox android:id="@+id/checkbox_large_banner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/checkbox_mr"
+        android:text="@string/checkbox_large_banner"/>
+    <CheckBox android:id="@+id/checkbox_medium_rectangle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/checkbox_medium_rectangle"
         android:checked="true"
-        android:onClick="onCheckboxMrClicked"/>
+        android:onClick="onCheckboxMediumRectangleClicked"/>
+    <CheckBox android:id="@+id/checkbox_full_banner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/checkbox_large_banner"/>
+    <CheckBox android:id="@+id/checkbox_leaderboard"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/checkbox_leaderboard"/>
+    <CheckBox android:id="@+id/checkbox_smart_banner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/checkbox_smart_banner"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
